[package]
name = "pass"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rsa = "0.9"
rand = "0.8"
skim = "0.10"
serde_json = "1.0"
chacha20 = "0.9"
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.3", features = ["derive"] }
rpassword = "7.2"
