[package]
name = "pass"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
skim = "0.9.4"
serde_json = "1.0"
chacha20 = "0.9"
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.3", features = ["derive"] }
rpassword = "7.2"
which = "4.4"
dirs = "5.0"
